<?xml version="1.0"?>
<package>
    <name>PHRI_HLController</name>
    <version>0.1.0</version>
    <description>Active pHRI controller based on PPC for human like end effector trajectory.</description>
    <maintainer email="mathieu.celerier.ing@gmail.com">Mathieu Célérier</maintainer>
    <license>BSD</license>
    <url type="repository"></url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
</package>